--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "next": "^10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "sass": "^1.32.12"
+  },
+  "devDependencies": {
+    "prettier": "2.2.1"
   }
 }
