--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "i18next": "^20.2.2",
     "next": "^10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-i18next": "^11.8.15",
     "sass": "^1.32.12"
   },
   "devDependencies": {
