--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "antd": "^4.15.4",
+    "graphql": "^15.5.0",
+    "graphql-request": "^3.4.0",
     "i18next": "^20.2.2",
     "next": "^10.0.0",
     "react": "17.0.1",
