--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "antd": "^4.15.4",
+    "datocms-client": "^3.4.9",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
     "i18next": "^20.2.2",
@@ -19,7 +20,9 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-i18next": "^11.8.15",
+    "react-slick": "^0.28.1",
     "sass": "^1.32.12",
+    "slick-carousel": "^1.8.1",
     "swiper": "^6.6.1"
   },
   "devDependencies": {
