--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "ahooks": "^2.10.4",
     "antd": "^4.15.4",
     "datocms-client": "^3.4.9",
     "graphql": "^15.5.0",
