--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "i18next": "^20.2.2",
     "next": "^10.0.0",
     "react": "17.0.1",
+    "react-device-detect": "^1.17.0",
     "react-dom": "17.0.1",
     "react-i18next": "^11.8.15",
     "react-slick": "^0.28.1",
