--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-i18next": "^11.8.15",
+    "react-numeric-input": "^2.2.3",
     "sass": "^1.32.12",
     "slick-carousel": "^1.8.1",
     "swiper": "^6.6.1"
