--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-i18next": "^11.8.15",
-    "sass": "^1.32.12",
-    "slick-carousel": "^1.8.1",
-    "swiper": "^6.6.1"
+    "sass": "^1.32.12"
   },
   "devDependencies": {
     "prettier": "2.2.1"
